Links working between index and resume

--- a/Resume.html
+++ b/Resume.html
@@ -60,6 +60,10 @@ Dean's List							                              August 2011 - December 2013
 •	Attained junior and senior year while being involved in dual-credit classes
 National Council on Youth Leadership					                                                     September 2013
 •	Participated in group and individual activities for advancing a variety of skills, i.e. problem solving, leadership
+
+All finished with my resume? Let's go back to my 
+<a href="index.html">homepage.</a>
+
 </p>
 </body>
 
