--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
 	<meta charset="utf-8">
 	<title>Homework 2</title>
+	
 </head>
 
 <body>
+
+<p>
+If you would like to know more, please checkout my
+<a href="Resume.html">resume!</a>
+</p>
+
 <p>
 MSCI:3300 – Software Design and Development
 Due Tuesday, February 3, 2015
