index with pictures

--- a/index.html
+++ b/index.html
@@ -7,69 +7,36 @@
 </head>
 
 <body>
+<h1>Samantha Dale Koehn</h1>
+<p>
+	Hello world! My name is Samantha Koehn and I am designing this web page for my software design
+	and development class! I am a junior at the University of Iowa and I am majoring in business
+	management and information systems. I'm excited for this semester and I am ready to learn
+	a lot of new things.
+	 <figure> <img src="HerkyandMe.jpg" alt="A picture of Herky and me at a basketball game." height="550" width="550">
+	 <figcaption> A picture of Herky and me at a basketball game this season.</figcaption>
+	 </figure>
+						
+</p>
+<h2>All about me</h2>
+	I am from a small town in Iowa just north of Cedar Rapids. I graduated in 2013 and 
+	continued my education at Kirkwood Community College. Since my high school gave the option
+	to take college credit, I graduated from Kirkwood with an Associates Degree after a semester.
+	I am continuing my education at the University of Iowa and I will graduate in May of 2016.
+	While I am attending school I am also working for Kirkwood. I work at the technology store in 
+	Cedar Rapids called EagleTech, and also the Iowa City Kirkwood Campus bookstore. 
+	It does get very hectic balancing work and school along with the extracurriculars that
+	I am involved in on campus, but my roommates and friends keep me stress free with their support. 
+	<figure>
+		<img src="KellyandMe.jpg" alt="A picture of my roomate Kelly and I" height="550" width="550">
+		<figcaption>A picture of my Roomate Kelly and I at a football game.</figcaption>
+	</figure>
 
 <p>
 If you would like to know more, please checkout my
 <a href="Resume.html">resume!</a>
 </p>
 
-<p>
-MSCI:3300 – Software Design and Development
-Due Tuesday, February 3, 2015
-Assignment:
-Design a simple, two page web site about yourself. Use Git for version control of your application.
-The purpose of this assignment is to help you become familiar with HTML tags and attributes, using external Cascading
-Style Sheets, and coding to HTML5 and CSS3 standards. This assignment will also continue your introduction to Git
-version control commands and workflow. It is meant to be a fun assignment that will also allow others in your group to
-learn more about you. I will complete a HW2 as well so you can learn more about me. It will located at
-https://instruct.biz.uiowa.edu/courses/msci3300/colbert/html/HW2
-<p>Special Note:
-Instruct is available to anyone in the world via a web browser (http://instruct.biz.uiowa.edu). Please keep this in mind
-as you are deciding what information to share on the web pages. If you would prefer to not use your personal contact
-information feel free to just use your name and / or email address.</p>
-<p>Requirements:</p>
-<ol>
-<li>1) The web site should be created with a text editor such as Notepad++. Please do not use Dreamweaver, Visual Web
-Developer, etc.</li>
-<li>2) Files should reside in a HW2 folder on your Instruct. Your page should open automatically when I browse to your
-HW2 folder.
-i) Create two separate web pages in the root of your HW2 folder with hyperlinks to move back and forth
-between the pages.
-(a) index.html ‐ This is the first page users will see when they browse into your HW2 folder.
-(b) resume.html ‐ This will be your online resume.
-ii) Sub folders and file structure within the HW2 folder is your choice.</li>
-<li>3) Include two appropriate photos of yourself appropriately tagged so tooltips will show in IE, Firefox and Chrome.</li>
-<li>4) Include at least two different sizes of headings (i.e. (h1), (h2), etc.)</li>
-<li>5) Include information in at least one HTML list.</li>
-<li>6) resume.html should contain your resume with text left justified on a centered (div)</li>
-<li>7) Use an external style sheet to apply formatting to at least six elements on your web site including background‐color.</li>
-<li>8) Your style sheet should use at least 1 .css class for custom formatting.</li>
-<li>9) Your style sheet makes use of a border and the box model for at least 1 element on your web site.</li>
-<li>10) Create a second external style sheet for printing. Printing your resume.html page should be white background with
-black text. Headings, bold, and italics are OK, but any pictures or color text/backgrounds should not be included in
-the print version.</li>
-<li>11) When viewed on the computer, resume.html should have styling similar to your index page. When printed, the print</li>
-style sheet will be active and remove many of the formatting elements.</li>
-<li>12) Appropriate use of heading tags, paragraph tags, and line breaks to organize information.</li>
-<li>13) Site layout appears organized and easy to follow.</li>
-<li>14) Site text is grammatically correct and spelled properly.</li>
-<li>15) Pages pass successful validation as HTML5 and CSS3.
-i) Run your pages through a validation program and fix any errors. I recommend doing this frequently, so you
-know when something breaks.</li>
-<li>16) You have multiple git commits and pushes with useful commit messages, including a final, to your GitHub repository.
-You should also use at least one git branch and push the branch to your GitHub repository. Your branch should be
-merged back into master. Your final commit should include a Git tag indicating this is the code for version 1 of your
-web site.</li>
-<li>17) I will view your pages on Instruct for grading.</li>
-<li>18) I will view details of your HW2 repository on your GitHub account.</li>
-</ol>
-
-</p>
-
-
 </body>
-
-</html>
-
 
 </html>
