resume formatted and validated

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
+
+<section>
 <h1>Samantha Dale Koehn</h1>
 <p>
 	Hello world! My name is Samantha Koehn and I am designing this web page for my software design
@@ -16,7 +18,8 @@
 	 <figure> <img src="HerkyandMe.jpg" alt="A picture of Herky and me at a basketball game." height="550" width="550">
 	 <figcaption> A picture of Herky and me at a basketball game this season.</figcaption>
 	 </figure>
-						
+</section>
+<section>						
 </p>
 <h2>All about me</h2>
 	I am from a small town in Iowa just north of Cedar Rapids. I graduated in 2013 and 
@@ -31,11 +34,13 @@
 		<img src="KellyandMe.jpg" alt="A picture of my roomate Kelly and I" height="550" width="550">
 		<figcaption>A picture of my Roomate Kelly and I at a football game.</figcaption>
 	</figure>
+</section>
 
-<p>
+<footer>
+<nav>
 If you would like to know more, please checkout my
-<a href="Resume.html">resume!</a>
-</p>
+<a href="Resume.html">resume!</a></nav>
+</footer>
 
 </body>
 
