--- a/Resume.html
+++ b/Resume.html
@@ -1,70 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<header>
+<head>
 	<meta charset="utf-8">
 	<title>Resume</title>
-</header>
+</head>
 
 <body>
 
 <h1>Samantha Koehn</h1>
-<p/>
-Phone: 319-540-4690 Address: 3815 C Ave NE Cedar Rapids, IA 52402 Email: samantha-koehn@uiowa.edu
-Education
-Central City High School, Central City, IA 					       G.P.A. 3.64/4.00             May 2013
-Kirkwood Community College Associates of Arts Degree	                                                       G.P.A. 3.73/4.00    December 2013 
-The University of Iowa BBA Management						            Anticipated May 2016
-Experience
-Techxpert (Tech Expert)						                                                   July 2013-Present	
-EagleTech at Kirkwood Community College, Cedar Rapids, IA
-•	Responsible for shipping and receiving of Apple products and 3rd party accessories
-•	Interacted with customers for both technical support and sales of Apple products
-•	Actively share responsibility for the day to day output of the bookkeeping for the store
-Food and Beverage Worker							                                  June 2013-Present
-US Cellular Center Cedar Rapids, IA 
-•	Accurately completed cash and credit card sales transactions in a timely manner
-•	Maintained all service and sanitation requirements
-•	Handled food preparation and customers
-Kirkwood’s Student Leadership Council    						    May 2013-December 2013
-Kirkwood Community College, Cedar Rapids, IA						
-•	Planned activities throughout my semester at Kirkwood for student life
-•	Attended meetings on leadership, and how to be a leader
-•	Supported my school, and encouraged others to do the same 
-National Honor Society “Coins for Cancer” 							  March-April 2013
-Central City High School, Central City, IA					                  
-•	Raised  $1190 K-12
-•	As Vice President of NHS, chose the rewards for the winning classes of the competition
-•	Aided in counting coins as well as advertising the donations
-•	Organized final Pep Rally to disperse rewards
-Central City Yearbook							          	             August-January 2012
-Central City High School, Central City, IA						                             
-•	Solicited over $300 in advertisement donations
-•	Acted as part of a team with a great yearbook as the goal 
-Community Service
-Habitat for Humanity- A Brush of Kindness							     September 2013
-•	Painted underprivileged households
-Thanksgiving Dinner at Falcon Civic Center Central City, IA					      November 2012
-•	Assisted in the serving of holiday food to the senior citizens of the community
-•	Carried out stimulating conversations with the senior citizens
-Club Volleyball 12U Team						                                              January-March 2012
-•	Coached volleyball team three days a week and during Saturday tournaments
-•	Conducted fun but efficient practices that remained on task
-•	Adjusted and analyzed player's athletic form to ensure growth
-•	Designated positions for players by choosing positions that diversified their potential
-Honors
-National Honor Society, Vice President 					                  November 2011 - May 2013	
-Student Council, Treasurer					                                                   November 2012- May 2013
-¬Honor Roll								                       August 2009 - May 2013
-Dean's List							                              August 2011 - December 2013
-•	Attained junior and senior year while being involved in dual-credit classes
-National Council on Youth Leadership					                                                     September 2013
-•	Participated in group and individual activities for advancing a variety of skills, i.e. problem solving, leadership
+<small>
+Phone: 319-540-4690 Address: 3815 C Ave NE Cedar Rapids, IA 52402 Email: samantha-koehn@uiowa.edu</small>
+<h2>
+Education</h2>
+<p>
+The University of Iowa BBA Management						            Anticipated May 2016<br>
+Kirkwood Community College Associates of Arts Degree	                                                       G.P.A. 3.73/4.00    December 2013<br>
+Central City High School, Central City, IA 					       G.P.A. 3.64/4.00             May 2013<br>
 
+<h2>Experience</h2>
+
+<h3>BILL Hall Association</h3><h4>The University of Iowa 		                                            September 2014-Present </h4>
+ <ul><li>Planned monthly activities to be put on by our organization</li>
+ <li>Collaborated with other group members on the food, space, and prizes for each event</li>
+<li>Completed multiple requisitions through the University to fund each event</li></ul>
+
+<h3>Interview Chair, Delta Sigma Pi Professional Fraternity</h3><h4>The University of Iowa      February 2014-Present</h4>
+<ul><li>Planned recruitment process for Fraternity through 50 interviews and 4 information sessions</li>
+<li>Attend weekly meetings as well as philanthropic events throughout the year</li>
+<li>Demonstrated professionalism through events on campus, and professional trips to companies</li></ul>
+
+<h3>TippieTECH</h3><h4>The University of Iowa                                                                            February 2014-Present</h4>
+<ul><li>Updated two websites on campus for other student organizations developed by our student organization</li>
+<li>Discussed different impacts of technology in the contemporary business world</li>
+<li>Attended bi-monthly meetings with professional speakers from companies that discussed the technology they implemented and how it affected their business</li></ul>
+
+<h3>Techxpert (Tech Expert)</h3><h4>EagleTech at Kirkwood Community College, Cedar Rapids, IA  July 2013-Present</h4><ul>
+	<li>Responsible for shipping and receiving of Apple products and 3rd party accessories</li>
+	<li>Interacted with customers for both technical support and sales of Apple products</li>
+	<li>Actively share responsibility for the day to day output of the bookkeeping for the store</li></ul>
+
+<h2>Community Service</h2>
+<h3>Habitat for Humanity</h3><h4>Tippie Build									      April 2014</h4>
+<ul><li>Worked with others to help build a house for a person in need</li></ul>
+<h3>Storm Water Clean Up</h3><h4>Delta Sigma Pi							                  April 2014</h4>
+<ul><li>Worked with other business professional fraternity to clean lakes of debris</li></ul>
+<h3>NAMI</h3><h4> National Allegiance on Mental Illness                          				     January-May 2014</h4>
+ 	<ul><li>Helped with various tasks throughout semester</li>
+	<li>Handed out awareness packets and flyers for awareness</li></ul>
+<h3>A Brush of Kindness</h3><h4>Habitat for Humanity			                                       May 2014, September 2013</h4>
+	<ul><li>Painted 2 houses through a Habitat for Humanity</li></ul>
+<h3>Coach Club Volleyball</h3><h4> Central City Community Schools 12U Team						                          January-March 2012</h4>
+	<ul><li>Coached a 12U volleyball team of 12 girls for Saturday tournaments</li>
+	<li>Conducted fun but efficient practices that remained on task three days a week</li>
+	<li>Adjusted and analyzed player's athletic form to ensure growth</li>
+	<li>Designated positions for players by choosing positions that they were best suited for</li></ul>
+
+<h2>Honors</h2>
+<h4>Dean's List						                                           August 2011 - May 2014</h4>
+<h4>National Honor Society, Vice President 					              November 2011 - May 2013</h4>
+<h4>Student Council, Treasurer					                                       November 2012- May 2013</h4>
+<h4>Honor Roll								                               August 2009 - May 2013</h4>
+
+
+
+
+<footer>
 All finished with my resume? Let's go back to my 
 <a href="index.html">homepage.</a>
+</footer>
 
-</p>
 </body>
 
 </html>
