--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Homework 2</title>
+	<link rel="indexstylesheet" type="text/css" href="indexstylesheet.css">
 	
 </head>
 
