index and resume linked to stylesheet

--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
 	<meta charset="utf-8">
 	<title>Homework 2</title>
-	<link rel="indexstylesheet" type="text/css" href="indexstylesheet.css">
-	
+	<link rel="stylesheet"type="text/css"href="style.css"/>
 </head>
 
 <body>
 
 <section>
-<h1>Samantha Dale Koehn</h1>
+<h1>Samantha Dale Koehn</h1> 
 <p>
 	Hello world! My name is Samantha Koehn and I am designing this web page for my software design
 	and development class! I am a junior at the University of Iowa and I am majoring in business
