--- a/index.html
+++ b/index.html
@@ -8,33 +8,37 @@
 
 <body>
 
-<section>
 <h1>Samantha Dale Koehn</h1> 
 <p>
 	Hello world! My name is Samantha Koehn and I am designing this web page for my software design
 	and development class! I am a junior at the University of Iowa and I am majoring in business
 	management and information systems. I'm excited for this semester and I am ready to learn
-	a lot of new things.
+	a lot of new things. </p>
 	 <figure> <img src="HerkyandMe.jpg" alt="A picture of Herky and me at a basketball game." height="550" width="550">
 	 <figcaption> A picture of Herky and me at a basketball game this season.</figcaption>
 	 </figure>
-</section>
-<section>						
-</p>
+
+<h2>A few of my favorite things</h2><ul>
+<li> Hanging out with friends </li>
+<li> Learning new things</li>
+<li> Working with my awesome coworkers </li>
+<li> Watching movies </li></ul>
+
+
 <h2>All about me</h2>
-	I am from a small town in Iowa just north of Cedar Rapids. I graduated in 2013 and 
+	<p>I am from a small town in Iowa just north of Cedar Rapids. I graduated in 2013 and 
 	continued my education at Kirkwood Community College. Since my high school gave the option
 	to take college credit, I graduated from Kirkwood with an Associates Degree after a semester.
 	I am continuing my education at the University of Iowa and I will graduate in May of 2016.
 	While I am attending school I am also working for Kirkwood. I work at the technology store in 
 	Cedar Rapids called EagleTech, and also the Iowa City Kirkwood Campus bookstore. 
 	It does get very hectic balancing work and school along with the extracurriculars that
-	I am involved in on campus, but my roommates and friends keep me stress free with their support. 
+	I am involved in on campus, but my roommates and friends keep me stress free with their support. </p>
 	<figure>
 		<img src="KellyandMe.jpg" alt="A picture of my roomate Kelly and I" height="550" width="550">
-		<figcaption>A picture of my Roomate Kelly and I at a football game.</figcaption>
+		<figcaption>A picture of my roomate, Kelly, and I at a football game.</figcaption>
 	</figure>
-</section>
+
 
 <footer>
 <nav>
