final on branch

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	I am involved in on campus, but my roommates and friends keep me stress free with their support. </p>
 	<figure>
 		<img src="KellyandMe.jpg" alt="A picture of my roomate Kelly and I" height="550" width="550">
-		<figcaption>A picture of my roomate, Kelly, and I at a football game.</figcaption>
+		<figcaption>A picture of my roommate, Kelly, and I at a football game.</figcaption>
 	</figure>
 
 
